# tree-sitter-spicy

./: .pre-commit-config.yaml  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  build.rs  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/: dependabot.yml
.github/workflows/: test.yml  update.yml
bindings/c/: tree-sitter-spicy.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_spicy/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSpicy/: spicy.h
bindings/swift/TreeSitterSpicyTests/: TreeSitterSpicyTests.swift
queries/: highlights.scm  injections.scm
src/: grammar.json  lib.rs  node-types.json
stack-graphs/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
stack-graphs/rust/: bin.rs  lib.rs  test.rs
stack-graphs/src/: stack-graphs.tsg
stack-graphs/test/: module-import.spicy
test/corpus/: expression.spicy  function.spicy  ops.spicy  preprocessor.spicy  statement.spicy  type.spicy
test/corpus/statements/: assert.spicy  cast.spicy  comment.spicy  for-resolve.spicy  for.spicy  function-return.spicy  function.spicy  identifier.spicy  if.spicy  print.spicy  switch.spicy  while.spicy
test/corpus/types/: address.spicy  bool.spicy  enum  integer.spicy  map  optional  port  real.spicy  regex.spicy  result.spicy  struct  unit.spicy
test/highlight/: expressions.spicy  function.spicy  statements.spicy  unit.spicy  variables.spicy
