[package]
name = "tree-sitter-spicy"
description = "Spicy grammar for tree-sitter"
version = "0.0.1"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "spicy"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-spicy"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
# Do not pull in specific tree-sitter version so consumers can pick on which
# fits their requirements. The generated sources should be built with the
# version pinned in `package.json`; the Rust tests are expected to use the
# latest version.
tree-sitter = "*"

[build-dependencies]
cc = "1.0.87"

[workspace]
