[package]
name = "tree-sitter-spicy"
description = "Spicy grammar for tree-sitter"
version = "0.0.1"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "spicy"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-spicy"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.3"

[build-dependencies]
cc = "1.0.87"

[dev-dependencies]
tree-sitter = "0.26.3"
