[package]
name = "tree-sitter-stack-graphs-spicy"
version = "0.1.0"
description = "Stack graphs definition for spicy using tree-sitter-spicy"
readme = "README.md"
keywords = ["tree-sitter", "stack-graphs", "spicy"]
authors = [
    "Benjamin Bannier <bbannier@gmail.com>",
]
license = "MIT"
edition = "2018"

[[bin]]
name = "tree-sitter-stack-graphs-spicy"
path = "rust/bin.rs"
required-features = ["cli"]

[lib]
path = "rust/lib.rs"
test = false

[[test]]
name = "test"
path = "rust/test.rs"
harness = false

[features]
cli = ["anyhow", "clap", "tree-sitter-stack-graphs/cli"]

[dependencies]
anyhow = { version = "1.0", optional = true }
clap = { version = "4", optional = true, features = ["derive"] }
tree-sitter-stack-graphs = { version = "0.7.1", features = ["lsp"] }
tree-sitter-spicy = { path = ".." }

[dev-dependencies]
anyhow = "1.0"
tree-sitter-stack-graphs = { version = "0.7.1", features = ["cli"] }
